--- a/flip-revision-card/src/App.css
+++ b/flip-revision-card/src/App.css
@@ -1,5 +1,14 @@
+html {
+  box-sizing: border-box;
+  background-color: #282c34;
+}
 .App {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 20px;
+  padding: 20px;
 }
 
 .App-logo {
@@ -35,4 +44,59 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.card-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #4b4f57;
+  color: white;
+  border: #282c34 solid 1px;
+  width: 400px;
+  height: 600px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  margin: 20px;
+  padding: 20px;
+  transition: ease all 1s;
+}   
+
+.card:hover {
+  border: #c5c7cd solid 3px;
+} 
+.card .card-front {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.card .card-back {
+  display: none;
+}
+.card.flipped {
+  transform: rotateY(-180deg);
+  flex-direction: column;
+  background-color: #2163AD;
+}   
+.card.flipped .card-back {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  transform: rotateY(180deg);
+  transition: ease-in all 1s;
+}
+.card.flipped .card-front {
+  display: none;
 }
