--- a/flip-revision-card/src/App.css
+++ b/flip-revision-card/src/App.css
@@ -47,8 +47,8 @@ html {
 }
 
 .card-container {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
   align-items: center;
   justify-content: center;
   width: 100%;
@@ -60,6 +60,7 @@ html {
   align-items: center;
   justify-content: center;
   background-color: #4b4f57;
+  font: 1em sans-serif;
   color: white;
   border: #282c34 solid 1px;
   width: 400px;
@@ -99,4 +100,29 @@ html {
 }
 .card.flipped .card-front {
   display: none;
+}
+
+
+@media screen and (max-width: 1468px) {
+  .card-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .card {
+    width: 300px;
+    height: 500px;
+    font: 0.7em sans-serif;
+  }
+  
+}
+
+@media screen and (max-width: 7500px) {
+  .card-container {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .card {
+    width: 200px;
+    height: 300px;
+    font: 0.5em sans-serif;
+  }
+  
 }
