--- a/flip-revision-card/src/App.css
+++ b/flip-revision-card/src/App.css
@@ -98,6 +98,9 @@ html {
   transform: rotateY(180deg);
   transition: ease-in all 1s;
 }
+.card.flipped h1 {
+  transform: rotateY(180deg);
+}
 .card.flipped .card-front {
   display: none;
 }
@@ -122,7 +125,7 @@ html {
   .card {
     width: 200px;
     height: 300px;
-    font: 0.5em sans-serif;
+    font: 0.8em sans-serif;
   }
   
 }
